# bpm-ai-inference

./: Dockerfile  README.md  pyproject.toml  requirements.apple.txt  requirements.txt
.github/workflows/: bpm-ai-inference.yml  bpm-ai.yml  release.yml
bpm_ai_inference/: daemon.py  deamon.py
bpm_ai_inference/classification/: transformers_classifier.py  transformers_text_classifier.py
bpm_ai_inference/image_classification/: transformers_image_classifier.py
bpm_ai_inference/llm/llama_cpp/: _constants.py  llama_chat.py  output_schema.prompt  tool_use.prompt  util.py
bpm_ai_inference/ocr/: tesseract.py
bpm_ai_inference/pos/: spacy_pos_tagger.py
bpm_ai_inference/question_answering/: pix2struct_vqa.py  transformers_docvqa.py  transformers_qa.py
bpm_ai_inference/speech_recognition/: faster_whisper.py
bpm_ai_inference/token_classification/: gliner_token_classifier.py  transformers_token_classifier.py
bpm_ai_inference/translation/easy_nmt/: easy_nmt.py
bpm_ai_inference/util/: __init__.py  files.py  hf.py  language.py  optimum.py
tests/: conftest.py  test_classify.py  test_classify_image.py  test_docvqa.py  test_language.py  test_nmt.py  test_ocr.py  test_pos.py  test_qa.py  test_speech.py  test_token_classify.py  test_torch.py
