[tool.poetry]
name = "bpm-ai-inference"
version = "0.2.2"
description = "Inference and server for local AI implementations of bpm-ai-core abstractions."
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
repository = "https://github.com/holunda-io/bpm-ai-inference"
homepage = "https://www.holisticon.de/"
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
bpm-ai-core = "2.2.0"
faster-whisper = "^0.10.0"
lingua-language-detector = "^2.0.2"
langcodes = { version = "^3.3.0", extras = ["data"]}
pytesseract = "^0.3.10"
transformers = "^4.37.2"
sacremoses = "^0.1.1"
sentencepiece = "^0.2.0"
nltk = "^3.8.0"
pyro5 = "^5.15"


[tool.poetry.group.dev.dependencies]
torch = [
    { version = "=2.2.2", source="pypi", markers = "sys_platform == 'darwin'" },
    { version = "=2.2.2+cpu", source = "torch-cpu", markers = "sys_platform != 'darwin'" },
]
spacy = [
    { version = "=3.7.4", markers = "sys_platform != 'darwin'" },
    { version = "=3.7.4", extras = ["apple"], markers = "sys_platform == 'darwin' and platform_machine == 'arm64'" },
]


[[tool.poetry.source]]
name = "torch-cpu"
url = "https://download.pytorch.org/whl/cpu"
priority = "explicit"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.5"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
