[tool.poetry]
name = "bpm-ai-inference"
version = "0.2.8"
description = "Inference and server for local AI implementations of bpm-ai-core abstractions."
authors = ["Bennet Krause <bennet.krause@holisticon.de>"]
repository = "https://github.com/holunda-io/bpm-ai-inference"
homepage = "https://www.holisticon.de/"
license = "GPL-3.0-or-later"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
bpm-ai-core = "^2.4.0"
langfuse = "^2.7.6"
faster-whisper = "^0.10.0"
lingua-language-detector = "^2.0.2"
pytesseract = "^0.3.10"
transformers = "^4.37.2"
sacremoses = "^0.1.1"
sentencepiece = "^0.2.0"
nltk = "^3.8.0"
pyro5 = "^5.15"
optimum = {extras = ["onnxruntime"], version = "^1.18.0"}
gliner = "^0.1.6"
scipy = "1.10.1"
py-cpuinfo = "^9.0.0"


[tool.poetry.group.test.dependencies]
pytest = "^7.4.2"
pytest-asyncio = "^0.23.5"
pytest-dotenv = "^0.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
